--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<html>
+<head>
+    <link rel="stylesheet" href="styles.css"> 
+    <title>Aluraflix</title>
+</head>
 <body>
     <header>ALURAFLIX</header>
     <h1> TEORIA DA PIXAR - TODOS OS FILMES ESTÃO CONECTADOS !!
     </h1>
     <p> #teoriasobrefilmes </p>
-
+</div>
     <iframe width="670" height="377" src="https://www.youtube.com/embed/_QzsMDjG4gk" title="TEORIA DA PIXAR - TODOS OS FILMES ESTÃO CONECTADOS !!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
+</html>
