--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<html>
-<head>
+<html lang="pt-BR">
+<head> 
     <link rel="stylesheet" href="styles.css"> 
     <title>Aluraflix</title>
 </head>
 <body>
     <header>ALURAFLIX</header>
+    <section>
+        <div>
     <h1> TEORIA DA PIXAR - TODOS OS FILMES ESTÃO CONECTADOS !!
     </h1>
     <p> #teoriasobrefilmes </p>
 </div>
+<div>
     <iframe width="670" height="377" src="https://www.youtube.com/embed/_QzsMDjG4gk" title="TEORIA DA PIXAR - TODOS OS FILMES ESTÃO CONECTADOS !!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+</section>
 </body>
 </html>
