--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <header>ALURAFLIX</header>
     <section>
-        <div>
+        <div class="chamada-texto">
     <h1> TEORIA DA PIXAR - TODOS OS FILMES ESTÃO CONECTADOS !!
     </h1>
     <p> #teoriasobrefilmes </p>
