--- a/index.html
+++ b/index.html
@@ -15,5 +15,21 @@
     <iframe width="670" height="377" src="https://www.youtube.com/embed/_QzsMDjG4gk" title="TEORIA DA PIXAR - TODOS OS FILMES ESTÃO CONECTADOS !!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </section>
+    <section>
+        <h2>Teoria de filmes</h2>
+        <div class="categoria-videos">
+            <a href="https://youtu.be/cYQjxnCoWRk?si=9BLm_JMcZ3sqd1Nc">
+                <img src="https://img.youtube.com/vi/cYQjxnCoWRk/maxresdefault.jpg">
+            </a>
+            <a href="https://youtu.be/0AU2Ycf91KE?si=-PGvGMkEZgffdkyP">
+                <img src="https://img.youtube.com/vi/0AU2Ycf91KE/maxresdefault.jpg">
+            </a>
+            <a href="https://youtu.be/LaZSEjLTkbo?si=GimPePnCQA5rhbXZ">
+                <img src="https://img.youtube.com/vi/LaZSEjLTkbo/maxresdefault.jpg">
+            </a>
+            <a href="https://youtu.be/DlLWY4pnGbI?si=RzxBttHJt_hBnNGW">
+                <img src="https://img.youtube.com/vi/DlLWY4pnGbI/maxresdefault.jpg">
+            </a>
+    </section>
 </body>
 </html>
